--- a/src/column-selector/column-selectors.html
+++ b/src/column-selector/column-selectors.html
@@ -2,34 +2,7 @@
 <html>
 	<head>
 		<title>Column selector example</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<script type="text/javascript" src="../lib/jquery-1.3.2.js"></script>
-		<script type="text/javascript" src="jquery.column.js"></script>
-		<script type="text/javascript">
-		<!--
-			$(document).ready(function () {
-
-				var cells = $('th, td').width(50).height(25).css({textAlign: 'left'});
-
-				cells.each(function () {
-					$(this).text(this.cellIndex);
-				});
-			
-					
-				$('#t1 th:nth-col(odd)').css({backgroundColor: 'yellow'});
-
-				$('#t2 th:nth-col(2)').css({backgroundColor: 'yellow'});
-
-				$('#t3 th:nth-col(even)').css({backgroundColor: 'yellow'});
-
-				$('#t4 th:nth-col(2)').css({backgroundColor: 'yellow'});
-
-				$('#t5 td:nth-col(2)').css({backgroundColor: 'yellow'});
-
-				$('#t6 td:nth-col(1)').css({backgroundColor: 'yellow'});
-			});
-	-->
-		</script>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	</head>
 	<body>
 		<table border="1" id="t1">
@@ -204,5 +177,29 @@
 		<table id="t6" border="1">
 			<td></td>
 		</table>
+		<script type="text/javascript" src="../../lib/jquery-1.4.2.js"></script>
+		<script type="text/javascript" src="jquery.column.js"></script>
+		<script type="text/javascript">
+			$(document).ready(function () {
+
+				var cells = $('th, td').width(50).height(25).css({textAlign: 'left'});
+
+				cells.each(function () {
+					$(this).text(this.cellIndex);
+				});
+		
+				$('#t1 th:nth-col(odd)').css({backgroundColor: 'yellow'});
+
+				$('#t2 th:nth-col(2)').css({backgroundColor: 'yellow'});
+
+				$('#t3 th:nth-col(even)').css({backgroundColor: 'yellow'});
+
+				$('#t4 th:nth-col(2)').css({backgroundColor: 'yellow'});
+
+				$('#t5 td:nth-col(2)').css({backgroundColor: 'yellow'});
+
+				$('#t6 td:nth-col(1)').css({backgroundColor: 'yellow'});
+			});
+		</script>
 	</body>
 </html>
