--- a/src/text-align/examples.html
+++ b/src/text-align/examples.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Text Alignment Example</title>
-		<script type="text/javascript" src="../../lib/jquery-1.3.2.js"></script>
-		<script type="text/javascript" src="../table/jquery.column.js"></script>
+		<script type="text/javascript" src="../../lib/jquery-1.4.2.js"></script>
+		<script type="text/javascript" src="../column-selector/jquery.column.js"></script>
 		<script type="text/javascript" src="jquery.text-align.js"></script>
 		<script type="text/javascript">
 			$(function() {
